# bukowski

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
src/bukowski/: __init__.py  cli.py  factory.py  main.py
tests/: test_main.py
tests/fixtures/poetry/: pyproject.toml
tests/fixtures/uv/: pyproject.toml
